# debug-actions

./: .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/actions/ci-setup/: action.yaml
.github/workflows/: ci-setup.yaml  ci.yaml  setup_project.yaml
src/debug_actions/: main.py
tests/: main_test.py
